infrastructure/configuration/k8s/api-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: apiserver
  namespace: default
spec:
  rules:
    - host: cloud.overlien.no
      http:
        paths:
          - backend:
              service:
                name: kubernetes
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cloud.overlien.no
      secretName: apiserver-ingress-cert
